# solana-mcp-server

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  IDEEN.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  smithery.yaml
.github/: FUNDING.yml
.github/workflows/: publish.yml
AI_Pricing_Tracker/: index.html
Agent_Marketplace/: index.html
src/: analytics.py  config.py  server.py
src/clients/: coingecko.py  helius.py  jupiter.py  orca.py  raydium.py  rugcheck.py
src/tools/: defi.py  safety.py  token.py  wallet.py  whale.py
